tests/typing/fail/float-cast-01.stderr
error: type mismatch: `bool` is not castable to float
 --> tests/typing/fail/float-cast-01.rs:8:21
  |
8 |         a : float = false as float;
  |                     ^^^^^^^^^^^^^^
